feat(terminal): implemented terminal interactions